--- a/styles/reset.css
+++ b/styles/reset.css
@@ -108,9 +108,9 @@ section {
 }
 
 body {
-  /* It is better to work with percentage in aspects like this. */
   line-height: 1;
-  width: 100%;
+  max-width: 1354px;
+  margin: 0 auto;
 }
 
 ol,
